Credit Matthew Block and add a link to his website

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,7 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{14}{16}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
@@ -57,12 +57,16 @@ Nevertheless, I and a group of others have carefully preserved the original Firs
 and made it available on my website in both electronic and printed forms:
 
 \begin{center}
-\texttt{\normalsize http://www.bibles.org.uk/guardian-plates.html}
+\myurl{http://www.bibles.org.uk/guardian-plates.html}
 \end{center}
 
 For deriving the etymology of the words coined by the revelators, I acknowledge the use of the notes by Dr~Chris Halvorson.
 Many thanks are due to my friends Jim George and Mitch Austin for their helpful suggestions and comments,
 some of which have been incorporated into the study notes of the present edition.
+For information on the human sources, upon which this Revelation is based, I am indebted almost entirely to the outstanding
+research work by Matthew Block, published on his website \myurl{https://urantiabooksources.com/}.
+Only a few of the sources related to the scientific papers have been discovered by myself independently.
+
 Last, but not least, I am deeply grateful to Troy R.~Bishop, whom I am honoured to call my mentor and dear friend.
 
 \tunemarkuptwo{noquiz}{}{%
@@ -74,14 +78,13 @@ Clicking on the Paper's title in the quiz section will return you back to that P
 \textcolor{ubdarkblue}{%
 \authorfont
 \tunemarkup{pgnexus7}{\fontsize{19}{25}}
-\tunemarkup{pgnexus10}{\fontsize{22}{30}}
+\tunemarkup{pgnexus10}{\fontsize{24}{32}}
 \tunemarkup{pgkoboaurahd}{\fontsize{16}{22}}
 \tunemarkup{pgkauraone}{\fontsize{22}{30}}
 \tunemarkup{pgafour}{\fontsize{30}{40}}
 \selectfont
-\begin{center}
+\begin{flushleft}
 Tigran Aivazian\\
-London, England\\
-13\ts{th} July 2011.\\
-\end{center}
+London, England, 13\ts{th} July 2011.\\
+\end{flushleft}
 }
