Use math mode for the asterisk

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -870,7 +870,7 @@
  \def\fnst#1{}
 }{%
  \def\fnc#1{\r{}\stepcounter{nfnc}\fn{#1}}
- \def\fnst#1{\ignorespaces\ts{*}\stepcounter{nfnst}\fn{#1}}
+ \def\fnst#1{\ignorespaces$^*$\stepcounter{nfnst}\fn{#1}}
 }
 
 \newlength{\minitocafterskip}
