Add "thinmob" target for 20:9 aspect ratio (A70)

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -17,6 +17,7 @@ INTRODUCTION
 \tunemarkup{pgkindledx}{\fontsize{17}{21}\selectfont}
 \tunemarkup{pgafour}{\fontsize{16}{19}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{15}{18}\selectfont}
+\tunemarkup{pgthinmob}{\fontsize{15}{18}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{15}{17}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{14}{18}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{14}{18}\selectfont}
@@ -75,16 +76,8 @@ To use the quiz simply click on the symbol \quizsymbol\ at the end of any Paper 
 Clicking on the Paper's title in the quiz section will return you back to that Paper in the text section.
 }
 
-\textcolor{ubdarkblue}{%
-\authorfont
-\tunemarkup{pgnexus7}{\fontsize{19}{25}}
-\tunemarkup{pgnexus10}{\fontsize{24}{32}}
-\tunemarkup{pgkoboaurahd}{\fontsize{16}{22}}
-\tunemarkup{pgkauraone}{\fontsize{22}{30}}
-\tunemarkup{pgafour}{\fontsize{30}{40}}
-\selectfont
 \begin{flushleft}
+\itshape
 Tigran Aivazian\\
 London, England, 13\ts{th} July 2011.\\
 \end{flushleft}
-}
