--- a/tex/title.tex
+++ b/tex/title.tex
@@ -19,6 +19,7 @@
 \tunemarkup{pghanlin}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
+\tunemarkup{pgthinmob}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{19}{28}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16.5}{20}\selectfont}
@@ -29,6 +30,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pghanlin}{\fontsize{9}{20}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
+\tunemarkup{pgthinmob}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{16}{28}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
@@ -41,6 +43,7 @@ OF\\
 \tunemarkup{pgauraone}{\fontsize{20}{22}\selectfont}
 \tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
+\tunemarkup{pgthinmob}{\fontsize{16}{20}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{25}{30}\selectfont}
 \urantiapapers\\
 }%
@@ -51,6 +54,7 @@ OF\\
 \tunemarkup{pgcrownq}{\fontsize{19}{24}\selectfont}
 \tunemarkup{pgafour}{\fontsize{21}{24}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{12}\selectfont}
+\tunemarkup{pgthinmob}{\fontsize{10}{12}\selectfont}
 \tunemarkup{pgnexus10}{\fontsize{15}{22}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{13}{17}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{13}{15}\selectfont}
@@ -88,6 +92,7 @@ Edited by Tigran Aivazian\\[2ex]
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkobomini}{\fontsize{9}{10}\itshape}
 \tunemarkup{pgnexus7}{\fontsize{8}{10}\itshape}
+\tunemarkup{pgthinmob}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgnexus10}{\fontsize{12}{16}\itshape}
 \tunemarkup{pgkindledx}{\fontsize{10}{12}\itshape}
 \tunemarkup{pgcrownq}{\Large\itshape}
@@ -102,7 +107,7 @@ Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aiv
 The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
 \tunemarkuptwo{pgafour}{}{\small}\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
-\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pgnexus10}{10in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
+\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pgnexus10}{10in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
 }
 \end{center}
