--- a/tex/title.tex
+++ b/tex/title.tex
@@ -9,7 +9,7 @@
 \bib@raise@anchor{\bibpdfbookmark[0]{Title Page}{Ttl}}%
 \makeatother
 
-\vspace*{\stretch{0.01}}
+\vspace*{\stretch{0.1}}
 \begin{center}
 {
 \bibcovertitlefont
@@ -20,7 +20,7 @@
 \tunemarkup{pgkobomini}{\fontsize{14}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{13.5}{20}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{13.5}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{19}{28}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{17.3}{28}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{15}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{16.5}{20}\selectfont}
 THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
@@ -31,7 +31,7 @@ THE BRITISH \tunemarkuptwo{nofnt}{TEXT}{STUDY} EDITION\\
 \tunemarkup{pgkobomini}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{10}{20}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{10}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{16}{28}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{14}{28}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{12}{20}\selectfont}
 \tunemarkup{pgauraone}{\fontsize{12}{20}\selectfont}
 OF\\
@@ -44,7 +44,7 @@ OF\\
 \tunemarkup{pgkobomini}{\fontsize{16.6}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{20}\selectfont}
 \tunemarkup{pgthinmob}{\fontsize{16}{20}\selectfont}
-\tunemarkup{pgnexus10}{\fontsize{25}{30}\selectfont}
+\tunemarkup{pgnexus10}{\fontsize{23}{30}\selectfont}
 \urantiapapers\\
 }%
 {%
@@ -103,13 +103,13 @@ The text of \bibemph{The Urantia Papers} is in the public domain.}\\[5pt]
 \tunemarkuptwo{coverimage}{Cover design by Gary Tonge.\\}{}
 The latest version of this book can be downloaded from:\\
 {\upshape\bfseries http://www.bibles.org.uk}\\
-Please send all comments \&\ suggestions to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
-The symbol \pc\ marks the first paragraph in the group as in the first edition, where such groups were delimited by blank lines.\tunemarkuptwo{nofnt}{\\[5pt]}{ The asterisk\ts{*} indicates a study note.\\[5pt]}
+Please send all comments to: {\makeatletter\upshape\bfseries aivazian.tigran@gmail.com\makeatother}\\[1ex]
 \tunemarkuptwo{pgafour}{}{\small}\tux\ Typeset with \XeLaTeX\ of \TeX\ Live 2017 under Linux.\\
 Text set in \textbf{\itshape\tunemarkup{minionpro}{Adobe }\tunemarkup{garamond}{Adobe }\tunemarkup{arno}{Adobe }\tunemarkup{academy}{ParaType }\urantiamainfont} at \urantiamainfontsize pt.\\[18pt]
-\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7in Colour}\tunemarkup{pgnexus10}{10in Colour}\tunemarkup{pghanlin}{6in eInk}\tunemarkup{pgkobomini}{5in eInk}\tunemarkup{pgkoboaurahd}{7in eInk}\tunemarkup{pgkindledx}{10in eInk}\tunemarkup{pgauraone}{8in eInk}\\
+\upshape\small\tunemarkup{pgcrownq}{\large}\tunemarkup{pgafour}{\Large}\bfseries PDF version: \tunemarkup{pgthinmob}{20:9 Colour}\tunemarkup{pgcrownq}{Crown Quarto}\tunemarkup{pgafour}{A4}\tunemarkup{pgnexus7}{7" Colour}\tunemarkup{pgnexus10}{10" Colour}\tunemarkup{pghanlin}{6" eInk}\tunemarkup{pgkobomini}{5" eInk}\tunemarkup{pgkoboaurahd}{7" eInk}\tunemarkup{pgkindledx}{10" eInk}\tunemarkup{pgauraone}{8" eInk}\\
 \upshape\bfseries PDF date: \mytoday{}\\
 }
+\vspace*{\stretch{0.1}}
 \end{center}
 
 \titleframe
