Add ubblue definition to all builds

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -760,6 +760,7 @@
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\bibpaperfont}{\headingfont\large\bfseries}
 \newcommand{\bibpapertitlefont}{\headingfont\Large\bfseries}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
@@ -789,6 +790,7 @@
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\bibpaperfont}{\headingfont\normalsize\bfseries}
 \newcommand{\bibpapertitlefont}{\headingfont\large\bfseries}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
@@ -822,6 +824,7 @@
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\bibpaperfont}{\headingfont\fontsize{12}{14.5}\selectfont}
 \newcommand{\bibpapertitlefont}{\headingfont\fontsize{15}{23}\bfseries}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -860,6 +863,7 @@
 \renewcommand{\bibheadpagesize}{\fontsize{8}{8}\selectfont}
 \newcommand{\bibpaperfont}{\headingfont\large\selectfont}
 \newcommand{\bibpapertitlefont}{\headingfont\Large\bfseries}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
@@ -923,6 +927,7 @@
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
 %\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
 %\pagecolor{ubpagebg}
+\definecolor{ubblue}{rgb}{0.0, 0.3, 0.6}
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
 \definecolor{ubdarkred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
@@ -956,6 +961,7 @@
 \definecolor{ubpagecolor}{rgb}{0.0, 0.0, 0.2}
 %\definecolor{ubpagebg}{rgb}{1.0, 1.0, 0.7}
 %\pagecolor{ubpagebg}
+\definecolor{ubblue}{rgb}{0.0, 0.3, 0.6}
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
 \definecolor{ubdarkred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
@@ -988,6 +994,7 @@
 \renewcommand{\usectiontitle}[3]{}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{18}{9}\bfseries\itshape}%
 \renewcommand{\quizlink}{}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
@@ -1020,6 +1027,7 @@
 \setcounter{DefaultLines}{2}
 \renewcommand{\authorfont}{\fontsize{10.1}{9}\bfseries\itshape}%
 \renewcommand{\quizlink}{}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
@@ -1049,6 +1057,7 @@
 
 \tunemarkup{pgkindledx}{%
 \renewcommand{\quizlink}{}
+\definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
