--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -51,10 +51,11 @@ The need for the revision of the text was predicted at \bibref[101:4.2]{p101 4:2
 \end{quote}
 
 Well, those ``few short years'' have come to pass and it now devolves upon us --- its students and guardians --- to revise,
-expand and fearlessly continue the living stream of the Fifth Epochal Revelation.
-And to all those fearful and unbelieving who would speedily accuse me of blasphemy I say with my Lord and my Master:
+expand and fearlessly continue the living stream of the Fifth Epochal Revelation:
 ``My Father worketh hitherto, and I work'' (John~5:17).
-Nevertheless, I and a group of others have carefully preserved the original First Edition (1955) of \bibemph{The Urantia Book}
+
+Realizing the great importance of this text, I and a group of others have carefully preserved
+the original First Edition (1955) of \bibemph{The Urantia Book}
 and made it available on my website in both electronic and printed forms:
 
 \begin{center}
