--- a/tex/title.tex
+++ b/tex/title.tex
@@ -74,7 +74,9 @@ Edited by Tigran Aivazian\\[2ex]
 \ifvolii Volume II: Papers 97--196\\\fi
 %\ifvoliii Volume III: Papers 129--196\\\fi
 \fi
-\vspace*{\stretch{0.6}}
+\vspace*{\stretch{0.4}}
+\includegraphics[width=0.2\columnwidth]{images/Phoenix-Logo-Circles.jpg}\\
+\vspace*{\stretch{0.3}}
 \titlesepbig\\
 \vspace*{\stretch{0.1}}
 \end{center}
@@ -87,7 +89,7 @@ Edited by Tigran Aivazian\\[2ex]
 
 \begin{center}
 \vspace*{\stretch{0.3}}
-\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\large}\bfseries\itshape ``Of all human knowledge, that which is of greatest value is to know the religious life of \mbox{Jesus} and how he lived it.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
+\begin{center}\shadowbox{\strut\parbox{7cm}{\normalsize\tunemarkup{pgnexus10}{\large}\tunemarkup{pgkindledx}{\Large}\tunemarkup{pgcrownq}{\Large}\tunemarkup{pgafour}{\large}\bfseries\itshape ``One of the most important things in human living is to find out what Jesus believed, to discover his ideals, and to strive for the achievement of his exalted life purpose.'' \bibref[(196:1.3)]{p196 1:3}}}\end{center}
 \vspace*{\stretch{0.5}}
 \tunemarkup{pghanlin}{\fontsize{8}{10}\itshape}
 \tunemarkup{pgkobomini}{\fontsize{9}{10}\itshape}
