Disable coverimage, get rid of "The Urantia Book"

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -55,7 +55,7 @@ expand and fearlessly continue the living stream of the Fifth Epochal Revelation
 ``My Father worketh hitherto, and I work'' (John~5:17).
 
 Realizing the great importance of this text, I and a group of others have carefully preserved
-the original First Edition (1955) of \bibemph{The Urantia Book}
+the original First Edition (1955) of the Urantia Papers, known at the time as \bibemph{The Urantia Book,}
 and made it available on my website in both electronic and printed forms:
 
 \begin{center}
