--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -54,7 +54,7 @@
 \tunemarkuptag{introinclude}
 
 % comment out to disable cover image
-\tunemarkuptag{coverimage}
+%\tunemarkuptag{coverimage}
 
 % comment out to enable Cosmic Citizenship Quiz
 %\tunemarkuptag{noquiz}
@@ -1024,7 +1024,7 @@
   pdftitle={The British Study Edition of the Urantia Papers},%
   pdfauthor={Tigran Aivazian <aivazian.tigran@gmail.com>},%
   pdfcreator={Bibles.org.uk Typesetting Environment based on TeX Live 2017},%
-  pdfsubject={The Urantia Papers in British English (also known as "The Urantia Book")},%
+  pdfsubject={The Urantia Papers in British English},%
   pdfkeywords={Earth,Urantia,Truth,History,Religion,Revelation,God,Jesus,Christianity,Bible,Scriptures,Koran,Islam,Judaism,Torah},%
   pdflang={English},%
   pdfcreationdate={D:20110713102733Z},%
