Upgrade to TeX Live 2020

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -145,7 +145,7 @@
 \newfontfamily\authorfontfamily[Mapping=tex-text]{\urantiaauthorfont}
 \newfontfamily\explfont[Mapping=tex-text]{\urantiaexplfont}
 
-\newfontfamily\captionfont[Mapping=tex-text]{Linux Libertine O}
+%\newfontfamily\captionfont[Mapping=tex-text]{Linux Libertine O}
 \DeclareCaptionFormat{capfont}{\captionfont\large#1#2#3}
 \captionsetup{format=capfont,labelfont=bf,margin={0cm,0cm},justification=justified,singlelinecheck=off}
 
@@ -1023,7 +1023,7 @@
 \hypersetup{%
   pdftitle={The British Study Edition of the Urantia Papers},%
   pdfauthor={Tigran Aivazian <aivazian.tigran@gmail.com>},%
-  pdfcreator={Bibles.org.uk Typesetting Environment based on TeX Live 2017},%
+  pdfcreator={Bibles.org.uk Typesetting Environment based on TeX Live 2020},%
   pdfsubject={The Urantia Papers in British English},%
   pdfkeywords={Earth,Urantia,Truth,History,Religion,Revelation,God,Jesus,Christianity,Bible,Scriptures,Koran,Islam,Judaism,Torah},%
   pdflang={English},%
