Don't print words of Jesus in red.

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -254,7 +254,7 @@
 \newcommand{\bibexpl}[1]{{\explfont #1}}
 \providecommand{\textlatin}[1]{{#1}}
 \renewcommand{\headrulewidth}{0pt}
-\renewcommand{\bibdropcapscolor}{ubdarkred}
+\renewcommand{\bibdropcapscolor}{ubred}
 \columnseprule=0.0pt
 
 \tunemarkup{fancylettrine}{%
@@ -647,7 +647,7 @@
 }
 
 \newcommand{\cmark}{\textcolor{ubgreen}{\ding{51}}}
-\newcommand{\xmark}{\textcolor{ubdarkred}{\ding{55}}}
+\newcommand{\xmark}{\textcolor{ubred}{\ding{55}}}
 
 \newcommand{\hsetoff}{\hspace*{1em}}
 \newcommand{\vsetspace}{\vspace{1ex}}
@@ -678,6 +678,8 @@
 \newcommand{\numw}{0.08\linewidth}
 \newcommand{\txtw}{0.81\linewidth}
 
+\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+
 \tunemarkup{pgkobomini}{%
 \setcounter{DefaultLines}{2}
 \newcommand{\authorfont}{\authorfontfamily\fontsize{19}{9}\bfseries\itshape}%
@@ -693,7 +695,7 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
@@ -723,7 +725,7 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
 \renewcommand{\bibfnchapsize}{\headerfont\Large}
@@ -758,7 +760,7 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge ahb}}
 \newcommand{\subfont}{\fontsize{14}{19}\itshape}
@@ -797,7 +799,7 @@
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubfblue}{rgb}{0.0, 0.0, 0.0}
 \renewcommand{\bibfnchapsize}{\headerfont\Large\bfseries}
 \renewcommand{\bibfnvssize}{\headerfont\large\bfseries}
@@ -823,7 +825,7 @@
 %\pagecolor{ubpagebg}
 \definecolor{ubblue}{rgb}{0.0, 0.3, 0.6}
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
-\definecolor{ubdarkred}{rgb}{0.8, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.3, 0.6}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubblue}{ahb}}}
@@ -858,7 +860,7 @@
 %\pagecolor{ubpagebg}
 \definecolor{ubblue}{rgb}{0.0, 0.3, 0.6}
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
-\definecolor{ubdarkred}{rgb}{0.8, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubblue}{ahb}}}
@@ -892,7 +894,7 @@
 %\pagecolor{ubpagebg}
 \definecolor{ubblue}{rgb}{0.0, 0.3, 0.6}
 \definecolor{ubgreen}{rgb}{0.0, 0.4, 0.0}
-\definecolor{ubdarkred}{rgb}{0.8, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.8, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.6}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.8}
 \newcommand{\titlesepbig}{{\usefont{U}{webo}{xl}{n}\huge\textcolor{ubgreen}{ahb}}}
@@ -925,7 +927,7 @@
 \renewcommand{\quizlink}{}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
@@ -958,7 +960,7 @@
 \renewcommand{\quizlink}{}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubpagecolor}{rgb}{1.0, 1.0, 1.0}
@@ -988,7 +990,7 @@
 \renewcommand{\quizlink}{}
 \definecolor{ubblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubgreen}{rgb}{0.0, 0.0, 0.0}
-\definecolor{ubdarkred}{rgb}{0.0, 0.0, 0.0}
+\definecolor{ubred}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ubdarkblue}{rgb}{0.0, 0.0, 0.0}
 \definecolor{ublinkcolor}{rgb}{0.0, 0.0, 0.0}
 \renewcommand{\headrulewidth}{0.5pt}
