Simplify the title of Introduction

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -8,7 +8,7 @@
 \makeatother
 
 \begin{center}
-\headingfont\Large\tunemarkup{pgafour}{\huge}\tunemarkup{pgauraone}{\LARGE}\bfseries
+\bibpapertitlefont
 INTRODUCTION
 \end{center}
 
